syntax = "proto3";
package members;

option go_package = "github.com/fatcatfablab/fcfl-member-sync/proto";

message MemberList {
    repeated Member members = 1;
}

message Member {
    string first_name = 1;
    string last_name = 2;
    string card_id = 3;
    int32 id = 4;
}

message Empty {}

service Membership {
    rpc List(Empty) returns (MemberList) {}
}
